[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ballBlue_10.png" type="Texture" id=1]
[ext_resource path="res://Ball.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=2]
bounce = 1.0

[sub_resource type="CircleShape2D" id=1]
radius = 37.5

[node name="Ball" type="RigidBody2D"]
position = Vector2( 0, -1.25992 )
mass = 10.0
physics_material_override = SubResource( 2 )
gravity_scale = 7.75
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="clip" type="AudioStreamPlayer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Ball_body_shape_entered"]
[connection signal="hit" from="." to="." method="playerHit"]
[connection signal="mouse_entered" from="." to="." method="_on_Ball_mouse_entered"]
